--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <div>
-        <h1>Flowers for you</h1>
+        <h1>Flowers for Wanrapha</h1>
         <a href="flower.html" class="button">Press to receive flowers</a>
     </div>
     
